# shdistapp

./: Makefile  Makefile.am  Makefile.in  Makefile.u1conflict  README.md  aclocal.m4  changes  changes~  config.h  config.status  configure  configure.ac  libtool
Debug/: Makefile  config.status  libtool
Debug/src/: Makefile  Makefile.u1conflict  Makefile.u1conflict.1  distapp  multicast_watchman  watchman
Debug/src/.deps/: calc_load.Po  dir_sender.Po  distapp.Po  error.Po  file_sender.Po  main.Po  multicast_watchman.Po  multicaster.Po  sender.Po  watchman.Po
autom4te.cache/: output.0  output.1  traces.0  traces.1
src/: Makefile  Makefile.am  Makefile.am~  Makefile.in  Makefile.u1conflict  calc_load.c  calc_load.c~  calc_load.h  calc_load.h~  defs.h  defs.h~  dialog.c  dialog.c~  dialog.h  dialog.h~  dir_op.c  dir_op.c~  dir_op.h  dir_op.h~  dir_sender.c  dir_sender.c~  dir_sender.h  dir_sender.h~  distapp  distapp.c  distapp.c~  distapp.h  distapp.h~  distapp.ui  file_sender.c  file_sender.h  get_pid.c  get_pid.c~  get_pid.h  gui.h  gui.h~  hashtab.c  hashtab.c~  hashtab.h  hashtab.h~  (+37 more)
src/.deps/: calc_load.Po  dialog.Po  dir_op.Po  dir_sender.Po  distapp.Po  file_sender.Po  get_pid.Po  hashtab.Po  ip.Po  main.Po  multicast_watchman.Po  multicaster.Po  scripts.Po  sender.Po  watchman.Po
